[gd_scene load_steps=9 format=2]

[ext_resource path="res://codigo/consumo/2/asas.gd" type="Script" id=1]
[ext_resource path="res://img/futuro.png" type="Texture" id=2]
[ext_resource path="res://img/seguir.png" type="Texture" id=3]
[ext_resource path="res://img/2meses.png" type="Texture" id=4]
[ext_resource path="res://img/5meses.png" type="Texture" id=5]
[ext_resource path="res://img/naoaplicar.png" type="Texture" id=6]
[ext_resource path="res://clarendon-black-bt.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 546.596
margin_top = 637.695
margin_right = 927.596
margin_bottom = 719.695
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="."]
visible = false
margin_left = 328.608
margin_top = 344.876
margin_right = 582.608
margin_bottom = 563.876
texture_normal = ExtResource( 4 )

[node name="TextureButton5" type="TextureButton" parent="."]
visible = false
margin_left = 647.456
margin_top = 344.876
margin_right = 901.456
margin_bottom = 563.876
texture_normal = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="."]
visible = false
margin_left = 976.064
margin_top = 341.622
margin_right = 1230.06
margin_bottom = 560.622
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 465.0
margin_top = 338.0
margin_right = 1247.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_TextureButton5_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
